public class Driver
{
	public static void main(String[] Args)
	{
		Menu menu = new Menu("扫雷");
	}
}
